[gd_scene load_steps=2 format=3 uid="uid://bmlt2qnq7yqhu"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"

[node name="MasterVolume" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MasterVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolume" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/MusicVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="SFXVolume" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/AudioSection/SFXVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InputSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InputLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/InputSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/InputSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputMappings" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/InputSection"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResetDefaultsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reset to Defaults"

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/ResetDefaultsButton" to="." method="_on_reset_defaults_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
